# test-iced

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: on_merge.yml
src/: main.rs
