[package]
name = "test-iced"
version = "0.1.0"
repository = "https://github.com/den-taku/test-iced"
description = ""
# homepage = ""
# documentation = "" # Maybe needless
# categories = [""]
# keywords = [""]
authors = ["DenTaku <dentaku1412@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
file-rotate = "0.6.0"
iced = {version = "0.3.0", features = ["smol"]}
simplelog = "0.11.2"

[profile.release]
strip = "debuginfo"